[project]
name = "dsocr-quant-demo"
version = "0.1.0"
description = "DeepSeek OCR 4-bit Quantization Demo using BitsAndBytes"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pdf-craft>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.20.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]

[project.scripts]
pdf-craftq = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["cli.py", "quantized_model.py"]

